--- a/html-sandbox-starter/07-responsive-media-queries/03-vh-vw-units/styles.css
+++ b/html-sandbox-starter/07-responsive-media-queries/03-vh-vw-units/styles.css
@@ -7,3 +7,13 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+.container {
+  background: coral;
+  height: 100%;
+  /* width: 50vw; */
+}
+
+.container h1 {
+  font: 4vw;
+}
